# miden-payroll-agentic

./: CLAUDE.md
frontend-template/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend-template/src/: App.tsx  config.ts  index.css  providers.tsx
frontend-template/src/components/: ClaimCard.tsx  ClaimInterface.tsx  Dashboard.tsx  GlassCard.tsx  MatrixBackground.tsx  Navbar.tsx  TransactionCard.tsx  TreasuryWidget.tsx
frontend-template/src/hooks/: useEmployeeClaims.ts  usePayroll.ts
frontend-template/src/services/: api.ts
project-template/contracts/distribute-payroll/: Cargo.toml
project-template/contracts/distribute-payroll/src/: lib.rs
project-template/contracts/payroll-account/: Cargo.toml
project-template/contracts/payroll-account/src/: lib.rs
project-template/integration/tests/: payroll_test.rs
